--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .sass-cache/
 *.css.map
+
+### Node ###
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependency directories
+node_modules
+jspm_packages
+
+# Optional npm cache directory
+.npm
+
