--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.sass-cache/
-*.css.map
-
 ### Node ###
 # Logs
 logs
@@ -8,9 +5,6 @@ logs
 npm-debug.log*
 
 # Dependency directories
+bower_components
 node_modules
-jspm_packages
-
-# Optional npm cache directory
-.npm
-
+spm_packages
